# polyswarm

./: .cursorrules  .env.example  .gitignore  =0.4.0  ARCHITECTURE.md  CURSOR_CONTEXT.md  README.md  demo_cli.py  main.py  pyproject.toml  requirements.txt  test_risk_manager.py
config/: categories.yaml
data/: paper_trades_20251221_003824.json  paper_trades_20251221_004731.json  paper_trades_20251221_020329.json  paper_trades_20251221_020358.json  paper_trades_20251221_021624.json  paper_trades_20251221_102652.json  paper_trades_20251221_115735.json  paper_trades_20251221_120859.json  paper_trades_20251221_142327.json  paper_trades_20251221_143606.json  paper_trades_20251221_153528.json  paper_trades_20251221_154707.json  paper_trades_20251221_155517.json  paper_trades_20251221_160652.json  paper_trades_20251221_170808.json  paper_trades_20251221_174307.json  paper_trades_20251221_174435.json  paper_trades_20251221_174512.json  paper_trades_20251221_174604.json  paper_trades_20251221_175842.json  paper_trades_20251221_180115.json  paper_trades_20251221_182923.json  paper_trades_20251221_183546.json  paper_trades_20251221_183921.json  paper_trades_20251221_185130.json  paper_trades_20251221_185827.json  paper_trading_state.json
scripts/: audit_summary.py  generate_api_keys.py  generate_wallet.py  monitor_paper_trading.py  paper_trading_24h.py  pre_flight_check.py  run_unit_tests.py  set_allowances.py  test_all_models.py  test_integration.py  test_markets.py  test_news_monitor.py  test_polymarket_connection.py  test_swarm.py
src/agents/: __init__.py  signals.py  swarm_agent.py  trading_swarm.py  trading_swarm_v2.py
src/analysis/: __init__.py  ai_accuracy_tracker.py  model_calibration.py  pattern_analyzer.py
src/connectors/: __init__.py  polymarket_client.py
src/data/: __init__.py  historical_collector.py
src/models/: __init__.py  model_factory.py
src/services/: __init__.py  consensus_detector.py  external_odds.py  news_monitor.py
src/strategies/: __init__.py  category_specialist.py  contrarian_detector.py  entry_timing.py  position_manager.py  risk_manager.py
src/utils/: __init__.py  rate_limiter.py
