[project]
name = "polymarket-trader"
version = "0.1.0"
description = "AI-powered automated trading bot for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["polymarket", "trading", "ai", "prediction-markets", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "py-clob-client>=0.21.0",
    "anthropic>=0.42.0",
    "openai>=1.59.0",
    "google-genai>=0.3.0",
    "google-generativeai>=0.4.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.0",
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "termcolor>=2.4.0",
    "tabulate>=0.9.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.0",
    "pytz>=2023.3",
    "schedule>=1.2.0",
    "APScheduler>=3.10.0",
    "loguru>=0.7.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "seaborn>=0.12.0",
]

[project.scripts]
polymarket = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore", ".dockerignore", "venv", ".venv"]
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]
ignore = ["E501", "W503", "E203"]
